# Robotics_and_innovation_backend

./: .env.example  .env.production.example  .env.testing.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.testing.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd-production.yml  cd-testing.yml  ci.yml
app/: __init__.py  config.py  main.py
app/api/v1/: router.py
app/common/: __init__.py  base_repository.py  exceptions.py
app/core/: database.py  dependencies.py  deps.py  email.py  security.py
app/db/: __init__.py  base.py  registry.py  session.py
app/modules/: __init__.py
app/modules/_template/: README.md  models.py  repository.py  router.py  schemas.py  service.py
app/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/health/: __init__.py  router.py
app/modules/shop/: cart.py  models.py  orders.py  router.py
app/modules/users/: __init__.py
docs/: API.md  ARCHITECTURE.md
requirements/: base.txt  dev.txt
scripts/: create_addresses.sql  create_cart_items.sql  create_orders.sql  deploy-remote.sh  migrate_product_id_varchar25.sql  run-local.sh  test.sh
tests/: conftest.py  test_health.py
tests/modules/auth/: test_auth.py
