[project]
name = "ri-backend"
version = "0.1.0"
description = "R&I Backend API"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP017"]  # datetime.UTC requires Python 3.11+

[tool.ruff.lint.per-file-ignores]
"app/core/email.py" = ["E501"]  # HTML email template has unavoidably long lines

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
